[gd_scene load_steps=31 format=2]

[ext_resource path="res://Resources_Scenes/Button/ButtonHard/ButtonHard.gd" type="Script" id=1]
[ext_resource path="res://Resources_Scenes/Button/ButtonEasy/ButtonEasy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Resources_Scenes/Button/ButtonMedium/ButtonMedium.gd" type="Script" id=4]
[ext_resource path="res://Resources_Scenes/Button/ButtonMedium/ButtonMediumPressed.png" type="Texture" id=5]
[ext_resource path="res://Resources_Scenes/Button/ButtonEasy/ButtonEasyPressed.png" type="Texture" id=6]
[ext_resource path="res://Resources_Scenes/Button/ButtonMedium/ButtonMedium.png" type="Texture" id=7]
[ext_resource path="res://Resources_Scenes/Button/ButtonMedium/ButtonMediumHover.png" type="Texture" id=8]
[ext_resource path="res://Resources_Scenes/Button/ButtonHard/ButtonHardPressed.png" type="Texture" id=9]
[ext_resource path="res://Resources_Scenes/Button/ButtonHard/ButtonHard.png" type="Texture" id=10]
[ext_resource path="res://Resources_Scenes/Button/ButtonEasy/ButtonEasyHover.png" type="Texture" id=11]
[ext_resource path="res://Resources_Scenes/Button/ButtonHard/ButtonHardHover.png" type="Texture" id=12]
[ext_resource path="res://Resources_Scenes/Button/ButtonEasy/ButtonEasy.png" type="Texture" id=13]
[ext_resource path="res://Resources_Scenes/PlayerMenu/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Menu/EasterEgg.gd" type="Script" id=15]
[ext_resource path="res://Resources_Scenes/PlatformGold/platform.tscn" type="PackedScene" id=16]
[ext_resource path="res://Resources_Scenes/Portals/PortalMenu/Portal.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Menu/Top.gd" type="Script" id=18]
[ext_resource path="res://Resources_Scenes/WallGold/WallGold.png" type="Texture" id=19]
[ext_resource path="res://Resources_Scenes/WallGold/WallGoldHalf.png" type="Texture" id=20]
[ext_resource path="res://Resources_Scenes/Font/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Resources_Scenes/Treasure/gold_pile.png" type="Texture" id=22]
[ext_resource path="res://Resources_Scenes/Button/xbox_button/xbox_360_buttons_sheet_zaph.png" type="Texture" id=23]
[ext_resource path="res://Resources_Scenes/Button/button_enter/enter.png" type="Texture" id=24]
[ext_resource path="res://Resources_Scenes/Button/button_exit/button_exit.png" type="Texture" id=25]
[ext_resource path="res://Resources_Scenes/Button/button_exit/button_exit_hover.png" type="Texture" id=26]
[ext_resource path="res://Resources_Scenes/Button/button_exit/button_exit_pressed.png" type="Texture" id=27]
[ext_resource path="res://Resources_Scenes/Title/title.png" type="Texture" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.6007, 9.25 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0.207843, 0.14902, 0.0352941, 1 )
font_data = ExtResource( 21 )

[node name="Top" type="Node2D"]
script = ExtResource( 18 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ],
"_edit_vertical_guides_": [ 426.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 425.0
margin_bottom = 240.0
rect_min_size = Vector2( 426, 240 )
expand = true

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Base" type="StaticBody2D" parent="Menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Base"]
position = Vector2( 212.781, 186 )
scale = Vector2( 3.30057, 1 )
shape = SubResource( 1 )

[node name="Sinistra" type="StaticBody2D" parent="Menu"]
position = Vector2( -15, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Sinistra"]
position = Vector2( 54, 140 )
scale = Vector2( 0.140606, 7.59276 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Menu/Sinistra"]
position = Vector2( 227.5, 88 )
scale = Vector2( 0.221354, 0.191358 )
texture = ExtResource( 28 )

[node name="Destra" type="StaticBody2D" parent="Menu"]
position = Vector2( 42, -41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Destra"]
position = Vector2( 64, 143 )
scale = Vector2( 0.138895, 8.30013 )
shape = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="Menu"]
margin_left = 168.0
margin_top = 138.0
margin_right = 258.0
margin_bottom = 221.0
custom_constants/vseparation = 1

[node name="Button Easy" type="TextureButton" parent="Menu/GridContainer"]
margin_right = 110.0
margin_bottom = 30.0
rect_min_size = Vector2( 110, 30 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 11 )
expand = true
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="Menu/GridContainer/Button Easy"]
visible = false
position = Vector2( 114, 17 )
scale = Vector2( 0.326924, 0.311198 )
texture = ExtResource( 23 )
hframes = 4
vframes = 4
frame = 12

[node name="Sprite" type="Sprite" parent="Menu/GridContainer/Button Easy/Sprite1"]
position = Vector2( -376.234, -12.8535 )
scale = Vector2( 0.128342, 0.140699 )
texture = ExtResource( 24 )

[node name="Button Exit" type="TextureButton" parent="Menu/GridContainer/Button Easy"]
margin_left = 181.0
margin_top = 71.0
margin_right = 244.0
margin_bottom = 98.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
expand = true

[node name="Sprite3" type="Sprite" parent="Menu/GridContainer/Button Easy/Button Exit"]
position = Vector2( 70, 11 )
scale = Vector2( 0.377103, 0.360962 )
texture = ExtResource( 23 )
hframes = 4
vframes = 4
frame = 2

[node name="Label" type="Label" parent="Menu/GridContainer/Button Easy"]
margin_top = 93.0
margin_right = 110.0
margin_bottom = 107.0

[node name="Button Medium" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 31.0
margin_right = 110.0
margin_bottom = 61.0
rect_min_size = Vector2( 110, 30 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
expand = true
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Menu/GridContainer/Button Medium"]
visible = false
position = Vector2( 114, 17 )
scale = Vector2( 0.326924, 0.311198 )
texture = ExtResource( 23 )
hframes = 4
vframes = 4
frame = 12

[node name="Sprite" type="Sprite" parent="Menu/GridContainer/Button Medium/Sprite2"]
position = Vector2( -376.234, -12.8535 )
scale = Vector2( 0.128342, 0.140699 )
texture = ExtResource( 24 )

[node name="Button Hard" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 62.0
margin_right = 110.0
margin_bottom = 92.0
rect_min_size = Vector2( 110, 30 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )
expand = true
script = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Menu/GridContainer/Button Hard"]
visible = false
position = Vector2( 114, 17 )
scale = Vector2( 0.326924, 0.311198 )
texture = ExtResource( 23 )
hframes = 4
vframes = 4
frame = 12

[node name="Sprite" type="Sprite" parent="Menu/GridContainer/Button Hard/Sprite3"]
position = Vector2( -376.234, -12.8535 )
scale = Vector2( 0.128342, 0.140699 )
texture = ExtResource( 24 )

[node name="Sfondo" type="Node2D" parent="Menu"]

[node name="TextureRect" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 374.0
margin_top = 370.0
margin_right = 472.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect2" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 471.0
margin_top = 370.0
margin_right = 569.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect3" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 568.0
margin_top = 370.0
margin_right = 666.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect4" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 665.0
margin_top = 370.0
margin_right = 763.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect5" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 762.0
margin_top = 370.0
margin_right = 860.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect6" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 859.0
margin_top = 370.0
margin_right = 957.0
margin_bottom = 467.0
texture = ExtResource( 19 )

[node name="TextureRect7" type="TextureRect" parent="Menu/Sfondo"]
margin_left = 928.0
margin_top = 370.0
margin_right = 1026.0
margin_bottom = 467.0
texture = ExtResource( 20 )
expand = true
flip_h = true

[node name="Label" type="Label" parent="Menu/Sfondo"]
margin_left = 683.0
margin_top = 386.0
margin_right = 748.0
margin_bottom = 455.0
custom_colors/font_color = Color( 0.753906, 0.623201, 0.0265045, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ivan
Federico
Pietro
Giuseppe"

[node name="Player" parent="Menu" instance=ExtResource( 14 )]
position = Vector2( 75, 138 )
scale = Vector2( 5, 5 )

[node name="EasterEgg" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="EasterEgg"]
position = Vector2( -1, -278 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EasterEgg/Area2D"]
position = Vector2( 688, 497 )
scale = Vector2( 5.14057, 1.32 )
shape = SubResource( 1 )

[node name="BasePiattaforma" type="Node2D" parent="EasterEgg"]

[node name="StaticBody2D" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 398, 473 )

[node name="StaticBody2D2" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 446, 473 )

[node name="StaticBody2D3" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 494, 473 )

[node name="StaticBody2D4" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 542, 473 )

[node name="StaticBody2D5" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 590, 473 )

[node name="StaticBody2D6" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 638, 473 )

[node name="StaticBody2D7" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 686, 473 )

[node name="StaticBody2D8" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 734, 473 )

[node name="StaticBody2D9" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 782, 473 )

[node name="StaticBody2D10" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 830, 473 )

[node name="StaticBody2D11" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 878, 473 )

[node name="StaticBody2D12" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 926, 473 )

[node name="StaticBody2D13" parent="EasterEgg/BasePiattaforma" instance=ExtResource( 16 )]
position = Vector2( 974, 473 )

[node name="PortalOne" parent="EasterEgg" instance=ExtResource( 17 )]
position = Vector2( 965, 442 )

[node name="TextureRect8" type="TextureRect" parent="EasterEgg"]
margin_left = 666.0
margin_top = 457.0
margin_right = 686.0
margin_bottom = 471.0
texture = ExtResource( 22 )
expand = true

[node name="TextureRect9" type="TextureRect" parent="EasterEgg"]
margin_left = 681.0
margin_top = 460.0
margin_right = 701.0
margin_bottom = 474.0
texture = ExtResource( 22 )
expand = true
flip_h = true

[node name="TextureRect10" type="TextureRect" parent="EasterEgg"]
margin_left = 738.0
margin_top = 459.0
margin_right = 758.0
margin_bottom = 473.0
texture = ExtResource( 22 )
expand = true
flip_h = true

[node name="TextureRect11" type="TextureRect" parent="EasterEgg"]
margin_left = 721.0
margin_top = 461.0
margin_right = 741.0
margin_bottom = 475.0
texture = ExtResource( 22 )
expand = true

[connection signal="pressed" from="Menu/GridContainer/Button Easy" to="Menu/GridContainer/Button Easy" method="_on_Button_Easy_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Button Easy/Button Exit" to="Menu" method="_on_Button_Exit_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Button Medium" to="Menu/GridContainer/Button Medium" method="_on_Button_Medium_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Button Hard" to="Menu/GridContainer/Button Hard" method="_on_Button_Hard_pressed"]
[connection signal="area_entered" from="EasterEgg/Area2D" to="EasterEgg" method="_on_Area2D_area_entered"]
